# cool

./: .gitignore  Cargo.toml  README.md  hypotheses.tsv  log.txt
.cargo/: config.toml
.github/workflows/: deploy-web-simulator.yml
crates/xteink-app/: Cargo.toml
crates/xteink-app/src/: lib.rs  session.rs  session_ui.rs
crates/xteink-app/tests/: session.rs
crates/xteink-browser/: Cargo.toml
crates/xteink-browser/src/: lib.rs
crates/xteink-buttons/: Cargo.toml
crates/xteink-buttons/src/: lib.rs
crates/xteink-controller/: Cargo.toml
crates/xteink-controller/src/: lib.rs
crates/xteink-display/: Cargo.toml  build.rs
crates/xteink-display/src/: bookerly.rs  demo.rs  lib.rs  pagination.rs  text.rs
crates/xteink-epub/: Cargo.toml
crates/xteink-epub/src/: lib.rs  zip.rs
crates/xteink-epub/tests/: reference_text.rs  reference_text_1024.rs  task3.rs
crates/xteink-fs/: Cargo.toml
crates/xteink-fs/src/: browser.rs  cache.rs  directory.rs  filesystem.rs  lib.rs  log.rs  low_level.rs  path.rs  reader.rs
crates/xteink-fs/tests/: cache_paths.rs
crates/xteink-input/: Cargo.toml
crates/xteink-input/src/: lib.rs
crates/xteink-input/tests/: input_manager.rs
crates/xteink-memory/: Cargo.toml
crates/xteink-memory/src/: lib.rs
crates/xteink-power/: Cargo.toml
crates/xteink-power/src/: lib.rs
crates/xteink-render/: Cargo.toml  build.rs
crates/xteink-render/src/: bookerly.rs  epub.rs  lib.rs  pagination.rs  paginator.rs  text.rs
crates/xteink-render/tests/: epub_render.rs  framebuffer.rs  paginator.rs  text_render.rs
crates/xteink-sdspi/: Cargo.toml
crates/xteink-sdspi/src/: card.rs  lib.rs  proto.rs
docs/: PROJECT_OVERVIEW.md  REPO_REVIEW_2026-04-07.md  ZERO_COPY_GUIDE.md  buttons.md  eink-display.md  sleep-modes.md
docs/superpowers/plans/: 2026-03-26-xteink-sdspi.md  2026-04-07-native-desktop-simulator.md  2026-04-08-cold-epub-performance.md  2026-04-08-pagination-unification.md  2026-04-09-byte-offset-reader-cache.md  2026-04-09-grayscale-antialiasing.md  2026-04-10-offset-window-pagination.md  2026-04-10-reader-footer-chapter-context.md
docs/superpowers/specs/: 2026-03-26-epub-parser-design.md  2026-03-27-epub-cache-and-fast-parse-design.md  2026-04-07-native-desktop-simulator-design.md  2026-04-08-cold-epub-performance-design.md  2026-04-09-byte-offset-reader-cache-design.md  2026-04-09-grayscale-antialiasing-design.md  2026-04-10-offset-window-pagination-design.md  2026-04-10-reader-footer-chapter-context-design.md
firmware/: Cargo.toml
firmware/native/: SPI.cpp  SPI.h  sd_bridge.cpp
firmware/src/: main.rs  sd_browser.rs  sd_ffi.rs  sd_hw.rs  sd_path.rs  sd_probe.rs
scripts/: build-and-flash.sh  build-web-simulator.sh  check-firmware.sh  run-simulator.sh  run-tests-embedded-fs.sh  run-tests-host.sh  run-tests.sh  run-web-simulator.sh
simulator/: Cargo.toml
simulator/src/: input.rs  lib.rs  main.rs  runtime.rs  storage.rs  window.rs
simulator/tests/: input.rs  runtime.rs  storage.rs
src/: display.rs  hal.rs  main.rs
web/: app.js  index.html
web-simulator/: Cargo.toml
web-simulator/src/: lib.rs
