[workspace]
members = [
    "crates/xteink-buttons",
    "crates/xteink-power",
    "crates/xteink-display",
    "firmware",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
embedded-hal = "1.0"
nb = "1.1"
esp-hal = { version = "1.0.0", features = ["esp32c3", "unstable"] }
esp-backtrace = { version = "0.18", features = ["esp32c3", "panic-handler", "println"] }
esp-println = { version = "0.16", default-features = false, features = ["esp32c3", "jtag-serial", "critical-section"] }
esp-bootloader-esp-idf = { version = "0.4", features = ["esp32c3"] }
critical-section = "1.2"

[profile.dev]
opt-level = "s"
debug = true

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
