[workspace]
members = [
    "crates/xteink-controller",
    "crates/xteink-buttons",
    "crates/xteink-input",
    "crates/xteink-browser",
    "crates/xteink-power",
    "crates/xteink-display",
    "crates/xteink-epub",
    "crates/xteink-sdspi",
    "crates/xteink-fs",
    "firmware",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
embedded-hal = "1.0"
nb = "1.1"
critical-section = "1.2"

[profile.dev]
opt-level = "s"
debug = true

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
