[package]
name = "xteink-reader"
version.workspace = true
edition.workspace = true

[dependencies]
esp-hal.workspace = true
esp-backtrace.workspace = true
esp-println.workspace = true
esp-bootloader-esp-idf.workspace = true
embedded-hal.workspace = true
critical-section.workspace = true
nb.workspace = true
embassy-embedded-hal = "0.5"
embassy-sync = "0.7"
embedded-hal-bus = "0.3"
esp32c3 = "0.31.0"
heapless = { version = "0.8", default-features = false }
xteink-buttons = { path = "../crates/xteink-buttons" }
xteink-browser = { path = "../crates/xteink-browser" }
xteink-epub = { path = "../crates/xteink-epub" }
xteink-sdspi = { path = "../crates/xteink-sdspi" }
xteink-power = { path = "../crates/xteink-power" }
xteink-display = { path = "../crates/xteink-display" }
embedded-sdmmc = { version = "0.9.0", default-features = false }

[[bin]]
name = "xteink-reader"
path = "src/main.rs"
