[package]
name = "xteink-reader"
version.workspace = true
edition.workspace = true

[dependencies]
esp-hal.workspace = true
esp-backtrace.workspace = true
esp-println.workspace = true
esp-bootloader-esp-idf.workspace = true
embedded-hal.workspace = true
critical-section.workspace = true
nb.workspace = true
embassy-embedded-hal = "0.5"
embassy-futures = "0.1"
embassy-time = "0.4"
embassy-sync = "0.7"
embedded-hal-bus = "0.3"
esp32c3 = "0.31.0"
heapless = { version = "0.8", default-features = false }
xteink-buttons = { path = "../crates/xteink-buttons" }
xteink-input = { path = "../crates/xteink-input" }
xteink-browser = { path = "../crates/xteink-browser" }
xteink-epub = { path = "../crates/xteink-epub" }
xteink-fs = { path = "../crates/xteink-fs" }
xteink-display = { path = "../crates/xteink-display" }
embassy-executor = { version = "0.9", default-features = false }
esp-rtos = { version = "0.2.0", features = ["esp32c3", "embassy"] }

[[bin]]
name = "xteink-reader"
path = "src/main.rs"
