[package]
name = "web-simulator"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
heapless = { version = "0.8", default-features = false }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "ImageData",
  "Storage",
  "Window",
] }
xteink-app = { path = "../crates/xteink-app" }
xteink-browser = { path = "../crates/xteink-browser" }
xteink-buttons = { path = "../crates/xteink-buttons" }
xteink-fs = { path = "../crates/xteink-fs" }
xteink-render = { path = "../crates/xteink-render" }
xteink-epub = { path = "../crates/xteink-epub" }
