[package]
name = "xteink-app"
version.workspace = true
edition.workspace = true

[dependencies]
heapless = { version = "0.8", default-features = false }
xteink-browser = { path = "../xteink-browser" }
xteink-buttons = { path = "../xteink-buttons" }
xteink-controller = { path = "../xteink-controller" }
xteink-render = { path = "../xteink-render" }

[lib]
path = "src/lib.rs"
