[package]
name = "xteink-display"
version.workspace = true
edition.workspace = true

[dependencies]
embedded-hal.workspace = true
heapless = { version = "0.8", default-features = false }
critical-section = "1.2"
xteink-epub = { path = "../xteink-epub" }

[build-dependencies]
fontdue = "0.9"

[lib]
path = "src/lib.rs"
