[package]
name = "xteink-epub"
version.workspace = true
edition.workspace = true

[dependencies]
miniz_oxide = { version = "0.8", default-features = false }

[target.'cfg(target_arch = "riscv32")'.dependencies]
esp-println = { version = "0.16", default-features = false, features = ["esp32c3", "jtag-serial", "critical-section"] }

[lib]
path = "src/lib.rs"
