[package]
name = "xteink-fs"
version.workspace = true
edition.workspace = true

[dependencies]
embassy-embedded-hal = "0.5"
embassy-sync = "0.7"
embedded-hal.workspace = true
embedded-sdmmc = { version = "0.9.0", default-features = false }
esp-hal.workspace = true
esp-println.workspace = true
heapless = { version = "0.8", default-features = false }
xteink-browser = { path = "../xteink-browser" }
xteink-display = { path = "../xteink-display" }
xteink-epub = { path = "../xteink-epub" }
xteink-sdspi = { path = "../xteink-sdspi" }
esp32c3 = "0.31.0"
