[package]
name = "xteink-fs"
version.workspace = true
edition.workspace = true

[features]
default = []
embedded = []

[dependencies]
embedded-hal.workspace = true
embedded-sdmmc = { version = "0.9.0", default-features = false }
heapless = { version = "0.8", default-features = false }
xteink-browser = { path = "../xteink-browser" }
xteink-display = { path = "../xteink-display" }
xteink-epub = { path = "../xteink-epub" }
xteink-sdspi = { path = "../xteink-sdspi" }

[target.'cfg(target_arch = "riscv32")'.dependencies]
embassy-embedded-hal = "0.5"
embassy-sync = "0.7"
esp-hal = { version = "1.0.0", features = ["esp32c3", "unstable"] }
esp-rtos = { version = "0.2.0", features = ["esp32c3"] }
esp-println = { version = "0.16", default-features = false, features = ["esp32c3", "jtag-serial", "critical-section"] }
esp32c3 = "0.31.0"
