[package]
name = "xteink-render"
version.workspace = true
edition.workspace = true

[dependencies]
critical-section.workspace = true
miniz_oxide = { version = "0.8", default-features = false }
xteink-epub = { path = "../xteink-epub" }
xteink-memory.workspace = true
rustybuzz = "0.20"

[build-dependencies]
fontdue = "0.9"
rustybuzz = "0.20"
freetype-rs = "0.38"

[dev-dependencies]
fontdue = "0.9"
rustybuzz = "0.20"
freetype-rs = "0.38"

[lib]
path = "src/lib.rs"
