[package]
name = "xteink-render"
version.workspace = true
edition.workspace = true

[dependencies]
core_maths = "0.1"
critical-section.workspace = true
miniz_oxide = { version = "0.8", default-features = false }
xteink-epub = { path = "../xteink-epub" }
xteink-memory.workspace = true
rustybuzz = { version = "0.20", default-features = false }

[build-dependencies]
fontdue = "0.9"
rustybuzz = "0.20"
freetype-rs = "0.38"

[dev-dependencies]
fontdue = "0.9"
rustybuzz = "0.20"
freetype-rs = "0.38"

[lib]
path = "src/lib.rs"
